# inc_lifecycle

./: .bazelrc  .clang-format  .gitignore  BUILD  Cargo.toml  MODULE.bazel  README.md  versions.json
.devcontainer/: devcontainer.json
.github/actions/setup-rust-build/: action.yml
.github/workflows/: build.yml  cargo_required.yml  code_coverage.yml  docs.yml  gitlint.yml  lint_clippy.yml  reference-integration.yml  test_and_docs.yml  tests.yml
config/: BUILD  flatbuffers_rules.bzl
demo/control_application/: BUILD  control.hpp  control_app_cli.cpp  control_daemon.cpp
demo/cpp_lifecycle_app/: BUILD  main.cpp
demo/cpp_supervised_app/: BUILD  main.cpp
demo/rust_supervised_app/: BUILD
demo/rust_supervised_app/src/: main.rs
docs/: conf.py  index.rst  statistics.rst
docs/module/health_monitor/: component_classification.rst
docs/module/health_monitor/architecture/: index.rst
docs/module/health_monitor/requirements/: index.rst
docs/module/health_monitor/safety_analysis/: fmea.rst
docs/module/lifecycle_client_lib/: lifecycle.rst  lifecyclemanager.rst
docs/module/lifecycle_client_lib/model/: app_lifecycle.puml  lifecycle_system_view.puml  sequence_view.puml  (+2 more)
examples/: run.sh
examples/config/: ecu_logging_config.json  gen_health_monitor_cfg.py  gen_launch_manager_cfg.py  hm_logging.json  lm_logging.json
examples/cpp_lifecycle_app/: BUILD  main.cpp
examples/cpp_supervised_app/: BUILD  main.cpp
examples/rust_supervised_app/: BUILD  Cargo.toml
examples/rust_supervised_app/src/: main.rs
health_monitor/: BUILD
health_monitor/alive_monitor/src/: alive_monitor.rs
health_monitor/examples/: deadline_monitor.cpp  deadline_monitor.rs  health_monitor.rs  heartbeat_monitor.cpp  logic_monitor.rs  makefile
health_monitor/src/: common.rs  deadline_monitor.rs  ffi.h  ffi.rs  ffi_old.rs  health_monitor.h  health_monitor.rs  heartbeat_monitor.rs  lib.rs  logic_monitor.rs
health_monitor/src/ffi/: common.hpp  common.rs  deadline_monitor.hpp  deadline_monitor.rs  mod.rs
launch_manager/: BUILD
main/: genindex.html  index.html  needs.json  search.html  searchindex.js
main/_sources/: index.rst.txt
main/module/health_monitor/: component_classification.html  index.html
pr-1/: needs.json  searchindex.js
pr-1/module/health_monitor/: component_classification.html  index.html
pr-11/: searchindex.js
pr-11/module/health_monitor/: component_classification.html  index.html
pr-2/: needs.json
pr-2/module/health_monitor/: component_classification.html  index.html
pr-3/module/health_monitor/: component_classification.html  index.html
pr-5/: needs.json
pr-5/module/health_monitor/: component_classification.html  index.html
pr-6/: index.html
pr-6/module/health_monitor/: component_classification.html  index.html
pr-7/: objects.inv
pr-7/module/health_monitor/: component_classification.html  index.html
rust/health_monitor/: Cargo.toml
rust/health_monitor/examples/: deadline_monitor.cpp  deadline_monitor.rs  logic_monitor.cpp  logic_monitor.rs  makefile
rust/health_monitor/src/: deadline_monitor.rs  lib.rs  logic_monitor.rs
rust/health_monitor/src/ffi/: common.hpp  deadline_monitor.hpp  deadline_monitor.rs  logic_monitor.hpp  logic_monitor.rs  mod.rs
rust_bindings/lifecycle_client_rs/: BUILD
rust_bindings/lifecycle_client_rs/src/: lifecycle.rs
rust_bindings/monitor_rs/: BUILD
rust_bindings/monitor_rs/src/: lib.rs  monitor.rs
scripts/: generate_cpp_compile_commands.sh  generate_rust_analyzer_support.sh
src/control_client_lib/: BUILD
src/health_monitoring_lib/: BUILD  Cargo.toml
src/health_monitoring_lib/cpp/: common.cpp  deadline_monitor.cpp  ffi_helpers.h  health_monitor.cpp  heartbeat_monitor.cpp  logic_monitor.cpp
src/health_monitoring_lib/cpp/deadline/: deadline_monitor.cpp
src/health_monitoring_lib/cpp/include/score/hm/: common.h  health_monitor.h  tag.h
src/health_monitoring_lib/cpp/include/score/hm/deadline/: deadline_monitor.h
src/health_monitoring_lib/cpp/include/score/hm/heartbeat/: heartbeat_monitor.h
src/health_monitoring_lib/cpp/include/score/hm/logic/: logic_monitor.h
src/health_monitoring_lib/cpp/tests/: deadline_monitor_test.cpp  health_monitor_test.cpp  heartbeat_monitor_test.cpp  integrated_test.cpp  logic_monitor_test.cpp  main.cpp  time_range_test.cpp
src/health_monitoring_lib/examples/: heartbeat_monitor.cpp
src/health_monitoring_lib/rust/: common.rs  ffi.rs  health_monitor.rs  lib.rs  tag.rs  worker.rs
src/health_monitoring_lib/rust/deadline/: common.rs  deadline_monitor.rs  deadline_state.rs  ffi.rs  mod.rs
src/health_monitoring_lib/rust/heartbeat/: ffi.rs  heartbeat_monitor.rs  heartbeat_state.rs  mod.rs
src/health_monitoring_lib/rust/logic/: ffi.rs  logic_monitor.rs  logic_state.rs  mod.rs
src/health_monitoring_lib/rust/supervisor_api_client/: mod.rs  score_supervisor_api_client.rs  stub_supervisor_api_client.rs
src/health_monitoring_lib/src/: common.rs  ffi.rs  lib.rs  log.rs  protected_memory.rs
src/health_monitoring_lib/src/common/: mod.rs
src/health_monitoring_lib/src/deadline/: common.rs  deadline_monitor.rs  deadline_state.rs  ffi.rs  mod.rs
src/health_monitoring_lib/src/ffi/: ffi.cpp  ffi.h  mod.rs
src/health_monitoring_lib/src/heartbeat_monitor/: mod.rs  tests.rs
src/launch_manager_daemon/: BUILD
src/launch_manager_daemon/health_monitor_lib/: BUILD
src/launch_manager_daemon/lifecycle_client_lib/: BUILD
src/launch_manager_daemon/process_state_client_lib/: BUILD
src/lifecycle_client_lib/: BUILD
src/lifecycle_client_lib/include/: aasapplicationcontainer.h  application.h  applicationcontext.h  lifecyclemanager.h  runapplication.h
src/lifecycle_client_lib/src/: aasapplicationcontainer.cpp  applicationcontext.cpp  lifecyclemanager.cpp
tests/integration/: BUILD  control_interface.py  readme.md  test_helper.hpp  testing_utils.py
tests/integration/smoke/: BUILD  control_daemon_mock.cpp  gtest_process.cpp  hm_demo.json  lm_demo.json  smoke.py
tests/ut/: BUILD
tests/ut/identifier_hash_UT/: identifier_hash_UT.cpp
tests/ut/processstateclient_UT/: BUILD
(+232 files in other folders)
