[workspace]
resolver = "2"
members = [
    "src/launch_manager_daemon/lifecycle_client_lib/rust_bindings",
    "src/health_monitor_lib/rust_bindings",
    "examples/rust_supervised_app",
]

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = ["S-CORE Contributors"]
license-file = "LICENSE.md"

[workspace.dependencies]
libc = "0.2.177"
clap = { version = "4.5.49", features = ["derive"] }
signal-hook = "0.3.18"

[workspace.lints.clippy]
std_instead_of_core = "warn"
alloc_instead_of_core = "warn"
