[workspace]
resolver = "2"
members = [
    "src/launch_manager_daemon/lifecycle_client_lib/rust_bindings",
    "src/launch_manager_daemon/health_monitor_lib/rust_bindings",
    "src/health_monitoring_lib",
    "examples/rust_supervised_app",
]
default-members = ["src/health_monitoring_lib"]

[workspace.package]
edition = "2021"
version = "0.0.1"
authors = ["S-CORE Contributors"]
license-file = "LICENSE.md"

[workspace.dependencies]
libc = "0.2.177"
clap = { version = "4.5.49", features = ["derive"] }
signal-hook = "0.3.18"

health_monitoring_lib = { path = "src/health_monitoring_lib" }
score_log = { git = "https://github.com/eclipse-score/baselibs_rust.git", tag = "v0.0.4" }
score_testing_macros = { git = "https://github.com/eclipse-score/baselibs_rust.git", tag = "v0.0.4" }
stdout_logger = { git = "https://github.com/eclipse-score/baselibs_rust.git", tag = "v0.0.4" }
containers = { git = "https://github.com/eclipse-score/baselibs_rust.git", tag = "v0.0.4" }

[workspace.lints.clippy]
std_instead_of_core = "warn"
alloc_instead_of_core = "warn"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
