# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************
module(
    name = "score_lifecycle_health",
    version = "0.0.1",
)

bazel_dep(name = "rules_python", version = "1.4.1")

PYTHON_VERSION = "3.12"

python = use_extension("@rules_python//python/extensions:python.bzl", "python", dev_dependency = True)
python.toolchain(
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(python)

# Add GoogleTest dependency
bazel_dep(name = "googletest", version = "1.17.0")

# C/C++ rules for Bazel
bazel_dep(name = "rules_cc", version = "0.2.9")

# Score platforms
bazel_dep(name = "score_bazel_platforms", version = "0.0.2")

# Score Rust/C++ toolchains
bazel_dep(name = "score_toolchains_rust", version = "0.1", dev_dependency = True)
git_override(
    module_name = "score_toolchains_rust",
    commit = "5614e4b273f2f5302d47a05d7e58dae86f97a3c3",  # 23.08.2025
    remote = "https://github.com/eclipse-score/toolchains_rust.git",
)

# Score Qnx rust toolchain
bazel_dep(name = "rust_qnx8_toolchain", version = "1.0.0", dev_dependency = True)
archive_override(
    module_name = "rust_qnx8_toolchain",
    strip_prefix = "qnx8",
    urls = [
        "https://github.com/qorix-group/rust-lang-qnx8/releases/download/1.0.0/qnx8_rust_toolchain.tar.gz",
    ],
)

# Score Qnx toolchain
bazel_dep(name = "score_toolchains_qnx", version = "0.0.3", dev_dependency = True)

toolchains_qnx = use_extension("@score_toolchains_qnx//:extensions.bzl", "toolchains_qnx", dev_dependency = True)
toolchains_qnx.sdp(
    sha256 = "f2e0cb21c6baddbcb65f6a70610ce498e7685de8ea2e0f1648f01b327f6bac63",
    strip_prefix = "installation",
    url = "https://www.qnx.com/download/download/79858/installation.tgz",
)
use_repo(toolchains_qnx, "toolchains_qnx_sdp")
use_repo(toolchains_qnx, "toolchains_qnx_qcc")

# Score Rust/C++ toolchains: Sysroots to download
rust_ext = use_extension("@score_toolchains_rust//extensions:rust_toolchain_ext.bzl", "rust_toolchain_ext", dev_dependency = True)
rust_ext.sysroot(
    name = "sysroot_linux_x64",
    build_file = "@score_toolchains_rust//sysroot:BUILD.bazel",
    sha256 = "5df5be9357b425cdd70d92d4697d07e7d55d7a923f037c22dc80a78e85842d2c",
    strip_prefix = "",
    url = "https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/4f611ec025be98214164d4bf9fbe8843f58533f7/debian_bullseye_amd64_sysroot.tar.xz",
)
rust_ext.sysroot(
    name = "sysroot_linux_aarch64",
    build_file = "@score_toolchains_rust//sysroot:BUILD.bazel",
    sha256 = "d303cf3faf7804c9dd24c9b6b167d0345d41d7fe4bfb7d34add3ab342f6a236c",
    strip_prefix = "",
    url = "https://commondatastorage.googleapis.com/chrome-linux-sysroot/toolchain/906cc7c6bf47d4bd969a3221fc0602c6b3153caa/debian_bullseye_arm64_sysroot.tar.xz",
)
use_repo(rust_ext, "sysroot_linux_x64")
use_repo(rust_ext, "sysroot_linux_aarch64")

# Score Rust/C++ toolchains: Configure rules_rust and toolchains_llvm extensions
bazel_dep(name = "rules_rust", version = "0.61.0")
bazel_dep(name = "toolchains_llvm", version = "1.2.0")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(
    name = "llvm_toolchain",
    cxx_standard = {"": "c++17"},
    llvm_versions = {"": "19.1.0"},
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot_linux_x64//:sysroot",
    targets = ["linux-x86_64"],
)
llvm.sysroot(
    name = "llvm_toolchain",
    label = "@sysroot_linux_aarch64//:sysroot",
    targets = ["linux-aarch64"],
)
use_repo(llvm, "llvm_toolchain")

# Rust
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust", dev_dependency = True)
rust.toolchain(
    edition = "2021",
    extra_target_triples = [
        "x86_64-unknown-linux-gnu",
        "aarch64-unknown-linux-gnu",
    ],
    versions = ["1.85.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains(
    "@rust_toolchains//:all",
    dev_dependency = True,
)

register_toolchains(
    "@llvm_toolchain//:all",
    dev_dependency = True,
)

register_toolchains(
    "@toolchains_qnx_qcc//:qcc_aarch64",
    dev_dependency = True,
)

register_toolchains(
    "@score_toolchains_rust//toolchains/aarch64-unknown-qnx8_0:toolchain_aarch64_qnx8_0",
    dev_dependency = True,
)

# Tooling
bazel_dep(name = "score_tooling", version = "1.0.2")
bazel_dep(name = "aspect_rules_lint", version = "1.5.3")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2")

# Flatbuffers
bazel_dep(name = "flatbuffers", version = "25.9.23")
git_override(
    module_name = "flatbuffers",
    commit = "187240970746d00bbd26b0f5873ed54d2477f9f3",
    remote = "https://github.com/google/flatbuffers.git",
)

bazel_dep(name = "score_baselibs", version = "0.1.3")

# Rust crate
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate", dev_dependency = True)
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//rust_bindings/lifecycle_client_rs:Cargo.toml",
        "//rust_bindings/monitor_rs:Cargo.toml",
        "//demo/rust_supervised_app:Cargo.toml",
    ],
)
use_repo(crate, "crates")

# ACL
# TODO Use baselibs/os/utils/acl (Not a simple c API wrap)
bazel_dep(name = "download_utils", version = "1.0.1")

deb = use_repo_rule("@download_utils//download/deb:defs.bzl", "download_deb")

deb(
    name = "acl-deb",
    build = "//external/acl:acl.BUILD",
    urls = ["https://archive.ubuntu.com/ubuntu/pool/main/a/acl/libacl1-dev_2.2.52-3build1_amd64.deb"],
    visibility = ["//visibility:public"],
)

# S-CORE process rules

bazel_dep(name = "score_docs_as_code", version = "2.0.2")
bazel_dep(name = "score_process", version = "1.3.1")  # Needed for linking to requirements (wp__requirements_comp, etc.) from the process_description repository.
