[package]
name = "health_monitoring_lib"
repository = "https://github.com/eclipse-score/inc_lifecycle/src/health_monitoring_lib"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license-file.workspace = true

[lib]
path = "rust/lib.rs"

[lints]
workspace = true

[dependencies]
score_log.workspace = true
score_testing_macros.workspace = true
containers.workspace = true
monitor_rs = { workspace = true, optional = true }

[dev-dependencies]
stdout_logger.workspace = true

[target.'cfg(loom)'.dependencies]
loom = { version = "0.7.2", features = ["checkpoint"] }

[features]
default = ["monitor_rs"]
stub_supervisor_api_client = []
